# file-audit-system

./: .gitignore  CMakeLists.txt  README.md  install.sh
config/: file-monitor.conf
docs/: CMakeLists.txt  diagram.uml
inc/: config.hpp  monitor.hpp  utils.hpp
src/: CMakeLists.txt  main.cpp  monitor.cpp
